# fastflx1

./: MANIFEST.in  README.md  install.sh  pyproject.toml  setup.sh  uninstall.sh  update.sh
configs/: gtk.css
configs/assistant-button/: double_press  long_press  short_press
configs/autostart/: alarmvol.desktop  andromeda-listener.desktop  batterysaver.desktop  dialtone.desktop  evremap.desktop  gen-thumbnails.desktop  gesture-shortcuts.desktop  selfdestroy.desktop  vol-buttons.desktop
configs/evremap/: remap.toml
configs/gtk-3.0/: gtk.css
configs/wofi/: config  style.css
data/: com.gitlab.fastflx1.desktop
data/applications/: io.FuriOS.Tweak-FLX1s.desktop
data/metainfo/: io.FuriOS.Tweak-FLX1s.metainfo.xml
data/systemd/: fastflx1-alarm.service  fastflx1-andromeda-fs@.service  fastflx1-gestures.service  fastflx1-guard.service
debian/: changelog  control  install  postrm  rules
files/: display-im6.q16.desktop  display-im7.q16.desktop  fastflx1  fastflx1.desktop  feh.desktop  yad-icon-browser.desktop
po/: af.po  ar.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  mk.po  ms.po  nl.po  no.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  (+12 more)
scripts/: alarmvol  andromeda-actions  andromeda-guard  andromeda-hammer  andromeda-listener  andromeda-listener.sh  andromeda-periodical-sync.sh  andromeda-shared-folders  andromeda_actions.sh  assistant-button-tweak  batterysaver  dialtone  double-press  fastflx1  gen-thumbnails  gesture-shortcuts  gnome-weather-location  hammer  long-press  selfdestroy  short-press  squeekboard-scale  vol-buttons
share/: audio-volume-change.oga
src/fastflx1/: const.py  main.py
src/tweak_flx1s/: const.py  (+3 more)
src/tweak_flx1s.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: fastflx1-alarm.service  fastflx1-gestures.service  fastflx1-guard.service  tweak-flx1s-alarm.service  tweak-flx1s-andromeda-fs@.service
(+64 files in other folders)
