[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tweak-flx1s"
version = "0.1.0"
description = "Tweak tool for FuriPhone FLX1s"
authors = [
    {name = "Alaraajavamma", email = "aki@urheiluaki.fi"},
]
license = "GPL-3.0-or-later"
dependencies = [
    "pygobject",
    "loguru",
]
requires-python = ">=3.8"

[project.scripts]
tweak-flx1s = "tweak_flx1s.main:main"

[tool.setuptools.packages.find]
where = ["src"]
